# gtest-nvim-setup

./: .clangd  CMakeLists.txt  README.md  setup.sh  test_main.cpp
